--- a/Source code/Theme/Themes/Tabs/TabItem.xaml
+++ b/Source code/Theme/Themes/Tabs/TabItem.xaml
@@ -9,8 +9,8 @@
     <Style TargetType="{x:Type TabItem}">
 
         <Setter Property="Background" Value="{StaticResource Transparent}"/>
-        <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
-        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="BorderBrush" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type TabControl}}, Path=BorderBrush}"/>
+        <Setter Property="BorderThickness" Value="{Binding RelativeSource={RelativeSource AncestorType={x:Type TabControl}}, Path=BorderThickness}"/>
         <Setter Property="Foreground" Value="{StaticResource ForegroundLowlight}"/>
         <Setter Property="FontFamily" Value="{x:Static Root:Parameters.FontFamily}"/>
         <Setter Property="FontSize" Value="{x:Static Root:Parameters.HeaderFontSize}"/>
@@ -29,19 +29,27 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type TabItem}">
                     <Grid SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-                        <Border Background="{TemplateBinding Background}"
-                                BorderBrush="{TemplateBinding BorderBrush}"
-                                BorderThickness="{TemplateBinding BorderThickness}"
-                                TextBlock.Foreground="{TemplateBinding Foreground}"
-                                TextBlock.FontFamily="{TemplateBinding FontFamily}"
-                                TextBlock.FontSize="{TemplateBinding FontSize}"
-                                TextBlock.FontWeight="{TemplateBinding FontWeight}"
-                                Margin="{TemplateBinding Padding}">
-                            <ContentPresenter x:Name="ContentHost"
-                                              ContentSource="Header"
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              RecognizesAccessKey="True"/>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"
+                                              SharedSizeGroup="TabItemColumnSizeGroup"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"
+                                           SharedSizeGroup="TabItemRowSizeGroup"/>
+                        </Grid.RowDefinitions>
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}"
+                            TextBlock.Foreground="{TemplateBinding Foreground}"
+                            TextBlock.FontFamily="{TemplateBinding FontFamily}"
+                            TextBlock.FontSize="{TemplateBinding FontSize}"
+                            TextBlock.FontWeight="{TemplateBinding FontWeight}">
+                        <ContentPresenter x:Name="ContentHost"
+                                          ContentSource="Header"
+                                          Margin="{TemplateBinding Padding}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          RecognizesAccessKey="True"/>
                         </Border>
                     </Grid>
                     <ControlTemplate.Triggers>
@@ -64,20 +72,20 @@
             </Setter.Value>
         </Setter>
         
-        <Style.Triggers>
+        <Style.Triggers>            
             <Trigger Property="IsMouseOver" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource ForegroundLowlight}"/>
                 <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
             </Trigger>
             <Trigger Property="IsSelected" Value="True">
-                <Setter Property="BorderBrush" Value="{StaticResource Foreground}"/>
+                <Setter Property="BorderBrush" Value="{StaticResource Accent}"/>
                 <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
                 <Setter Property="FontWeight" Value="SemiBold"/>
             </Trigger>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="BorderBrush" Value="{StaticResource Disabled}"/>
                 <Setter Property="Foreground" Value="{StaticResource Disabled}"/>
-            </Trigger>
+            </Trigger>            
         </Style.Triggers>
         
     </Style>
