--- a/Source code/Theme/Themes/Buttons/ToggleCommandButton.xaml
+++ b/Source code/Theme/Themes/Buttons/ToggleCommandButton.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:root="clr-namespace:Elysium.Theme"
                     xmlns:primitives="clr-namespace:Elysium.Theme.Controls.Primitives"
                     xmlns:controls="clr-namespace:Elysium.Theme.Controls">
 
@@ -12,7 +13,7 @@
         <Style.Triggers>
             <Trigger Property="IsChecked" Value="True">
                 <Setter Property="BorderBrush" Value="{StaticResource Foreground}"/>
-                <Setter Property="Foreground" Value="{StaticResource Foreground}"/>
+                <Setter Property="root:Parameters.CommandButtonMask" Value="{StaticResource Foreground}"/>
             </Trigger>
         </Style.Triggers>        
     </Style>
