--- a/Source code/Theme/Themes/Ranges/CircularProgressBar.xaml
+++ b/Source code/Theme/Themes/Ranges/CircularProgressBar.xaml
@@ -11,7 +11,7 @@
 
     <Style x:Key="{x:Type controls:CircularProgressBar}" TargetType="{x:Type controls:CircularProgressBar}">
 
-        <Setter Property="Background" Value="{StaticResource Background}"/>
+        <Setter Property="Background" Value="{StaticResource Transparent}"/>
         <Setter Property="BorderBrush" Value="{StaticResource ForegroundMiddlelight}"/>
         <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Foreground" Value="{StaticResource Accent}"/>
@@ -193,7 +193,7 @@
                     <ControlTemplate.Triggers>
                         <MultiTrigger>
                             <MultiTrigger.Conditions>
-                                <Condition Property="IsIndeterminate" Value="{x:Null}"/>
+                                <Condition Property="State" Value="Loading"/>
                                 <Condition Property="IsEnabled" Value="True"/>
                             </MultiTrigger.Conditions>
                             <MultiTrigger.Setters>
